stop product type bar overflowing on page render on colletions

--- a/working-assets/css/plp.css
+++ b/working-assets/css/plp.css
@@ -45,7 +45,7 @@
 }
 
 .product_type-bar {
-  overflow: visible;
+  overflow: hidden;
   
 }
 
